[package]
name = "resonance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false, features  = ["png", "vorbis", "bevy_ui", "wayland", "x11", "bevy_text"]}
bevy_prototype_lyon = "0.8.0"
bevy_rapier2d = "0.21.0"
fastrand = "2.0.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "symbols"
